# ctest-example-crash-on-timeout

./: CMakeLists.txt  README.md
tests/: test_my_test.cc
